# GTFS-flex-to-GOFS

./: .flake8  .gitignore  .python-version  CLAUDE.md  README.md  createTests.sh  pyproject.toml  setup.py
.github/workflows/: pull-request.yml  release.yml
CI/: .python-version  create_venv.sh  installDependencies.sh
gtfs_flex_to_gofs/: __main__.py  gofs_converter.py  patch_gtfs.py  utils.py
gtfs_flex_to_gofs/files/: operation_rules.py  zones.py
gtfs_flex_to_gofs_lite/: __main__.py  calendar.py  calendars.py  default_headers.py  fares.py  gofs.py  gofs_data.py  gofs_file.py  gofs_lite_converter.py  gofs_versions.py  operation_rules.py  patch_gtfs.py  save_file.py  service_brands.py  system_information.py  utils.py  vehicle_types.py  wait_time.py  wait_times.py  zones.py
gtfs_flex_to_gofs_lite/files/: booking_rules.py  calendars.py  gofs.py  operation_rules.py  service_brands.py  wait_times.py  zones.py
tests/: test_operating_rules_merging.py  test_runner.py  test_trip_type_classification.py
tests/base/: booking_rules.txt  fare_rules.txt
tests/test_added_calendar_dates/expected_default/: calendars.json  operating_rules.json  service_brands.json  system_information.json  zones.json
tests/test_added_calendar_dates/input/: agency.txt  calendar.txt  calendar_dates.txt  gtfs-metadata.json  itineraries.jsonl  itinerary_cells.txt  locations.geojson  routes.txt  stop_times.txt  stops.txt  trips.txt
tests/test_calendar_dates/expected_default/: booking_rules.json  calendars.json  operating_rules.json  service_brands.json  system_information.json  zones.json
(+119 files in other folders)
